--- a/src/index.html
+++ b/src/index.html
@@ -1,36 +1,39 @@
-
-
 <!DOCTYPE html>
 
 <html lang="en" class="no-js">
+  <head>
+    <!-- ABAJO LO DE SEBI -->
+    <!-- Basic need -->
+    <meta charset="UTF-8" />
+    <title>MyApp</title>
+    <base href="/" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <meta name="author" content="" />
+    <link rel="profile" href="#" />
 
-<head>
+    <!--Google Font-->
+    <link
+      rel="stylesheet"
+      href="http://fonts.googleapis.com/css?family=Dosis:400,700,500|Nunito:300,400,600"
+    />
+    <!-- Mobile specific meta -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="format-detection" content="telephone-no" />
 
-  <!-- ABAJO LO DE SEBI -->
-  <!-- Basic need -->
-  <meta charset="UTF-8">
-  <title>MyApp</title>
-  <base href="/" />
-  <meta name="description" content="">
-  <meta name="keywords" content="">
-  <meta name="author" content="">
-  <link rel="profile" href="#">
+    <!-- CSS files -->
+    <link rel="stylesheet" href="assets/css/plugins.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
 
-  <!--Google Font-->
-  <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Dosis:400,700,500|Nunito:300,400,600' />
-  <!-- Mobile specific meta -->
-  <meta name=viewport content="width=device-width, initial-scale=1">
-  <meta name="format-detection" content="telephone-no">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+  </head>
 
-  <!-- CSS files -->
-  <link rel="stylesheet" href="assets/css/plugins.css">
-  <link rel="stylesheet" href="assets/css/style.css">
-
-
-
-</head>
-
-<body>
+  <body>
     <!-- <app-root></app-root> -->
 
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
@@ -40,11 +43,17 @@
 
     <!--preloading-->
     <div id="preloader">
-        <img class="logo" src="assets/images/logo1.png" alt="" width="119" height="58">
-        <div id="status">
-            <span></span>
-            <span></span>
-        </div>
+      <img
+        class="logo"
+        src="assets/images/logo1.png"
+        alt=""
+        width="119"
+        height="58"
+      />
+      <div id="status">
+        <span></span>
+        <span></span>
+      </div>
     </div>
     <!--end of preloading-->
 
@@ -52,6 +61,5 @@
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/plugins2.js"></script>
     <script src="assets/js/custom.js"></script>
-</body>
-
+  </body>
 </html>
